commit translated contents

--- a/docs/code-quality/c6014.md
+++ b/docs/code-quality/c6014.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6014
 ms.assetid: ef76ec88-74d2-4a3b-b6fe-4b0851ab3372
-ms.openlocfilehash: 398d3d5e2d7a151e783baf81a57b54e76c95f957
-ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
+ms.openlocfilehash: fd589602d9634cb5e16dc99f5b726d30bc43ad14
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/16/2020
-ms.locfileid: "90685857"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91502091"
 ---
 # <a name="c6014"></a>C6014
 
@@ -20,7 +20,7 @@ ms.locfileid: "90685857"
 
 Questo avviso indica che il puntatore specificato punta alla memoria allocata o a un'altra risorsa allocata che non è stata liberata. L'analizzatore verifica questa condizione solo quando `_Analysis_mode_(_Analysis_local_leak_checks_)` viene specificata l'annotazione SAL. Per impostazione predefinita, questa annotazione viene specificata per il codice della modalità kernel di Windows (driver). Per ulteriori informazioni sulle annotazioni SAL, vedere [utilizzo delle annotazioni SAL per ridurre i difetti del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
 
-## <a name="examples"></a>Esempi
+## <a name="examples"></a>Esempio
 
 Il codice seguente genera questo avviso:
 
@@ -83,7 +83,7 @@ Questo avviso viene segnalato per le perdite di memoria e di risorse quando la r
 
 Si noti che l'analisi del codice non riconosce l'implementazione effettiva di un allocatore di memoria (che implica l'aritmetica degli indirizzi) e non riconosce che la memoria è allocata (anche se verranno riconosciuti molti wrapper). In questo caso, l'analizzatore non riconosce che la memoria è stata allocata e genera questo avviso. Per escludere il falso positivo, utilizzare una `#pragma` direttiva sulla riga che precede la parentesi graffa di apertura `{` del corpo della funzione.
 
-Per evitare interamente queste potenziali inconsistenze, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
+Per evitare interamente queste potenziali inconsistenze, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ```cpp
 // cl.exe /analyze /EHsc /nologo /W4
