--- a/docs/code-quality/c6031.md
+++ b/docs/code-quality/c6031.md
@@ -1,6 +1,6 @@
 ---
 title: C6031
-description: Descrive C++ C6031 di avviso di analisi del codice e come risolverlo.
+description: Descrive C6031 di avviso di analisi del codice C++ e come risolverlo.
 ms.date: 03/16/2020
 ms.topic: reference
 f1_keywords:
@@ -8,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6031
 ms.assetid: 59e1ef0a-b3ca-4ffa-bcb3-ad2bd22ece22
-ms.openlocfilehash: 705c5d9e1e58a4881fcd504c1d86bcc2cef7d3e5
-ms.sourcegitcommit: 44eeb065c3148d0484de791080a3f963109744fc
+ms.openlocfilehash: 86c322a891c34fd00797dffacd2360d17aaa0048
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/18/2020
-ms.locfileid: "79509355"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91502069"
 ---
 # <a name="c6031"></a>C6031
 
@@ -21,7 +21,7 @@ ms.locfileid: "79509355"
 
 Questo avviso indica che il chiamante non verifica il valore restituito di una funzione in caso di errore. A seconda della funzione chiamata, questo difetto può comportare un comportamento apparentemente casuale del programma. Che include arresti anomali e danneggiamenti dei dati in condizioni di errore o in situazioni di risorse insufficienti.
 
-In generale, non è sicuro presupporre che le chiamate alle funzioni che richiedono disco, rete, memoria o altre risorse possano avere esito positivo. Il chiamante deve sempre controllare il valore restituito e gestire i casi di errore in modo appropriato. Si consiglia inoltre di utilizzare l'annotazione `_Must_inspect_result_`, che verifica che il valore venga esaminato in modo utile.
+In generale, non è sicuro presupporre che le chiamate alle funzioni che richiedono disco, rete, memoria o altre risorse possano avere esito positivo. Il chiamante deve sempre controllare il valore restituito e gestire i casi di errore in modo appropriato. Si consiglia inoltre di utilizzare l' `_Must_inspect_result_` annotazione, che verifica che il valore venga esaminato in modo utile.
 
 ## <a name="example"></a>Esempio
 
@@ -65,7 +65,7 @@ void f( )
 }
 ```
 
-Questo avviso viene generato anche se il chiamante ignora il valore restituito di una funzione annotata con la proprietà `_Check_return_` come illustrato nel codice seguente.
+Questo avviso viene generato anche se il chiamante ignora il valore restituito di una funzione annotata con la `_Check_return_` proprietà, come illustrato nel codice seguente.
 
 ```cpp
 #include <sal.h>
@@ -93,5 +93,5 @@ void test_f()
 
 ## <a name="see-also"></a>Vedere anche
 
-[fopen_s, _wfopen_s](/cpp/c-runtime-library/reference/fopen-s-wfopen-s)\
+[fopen_s, _wfopen_s](../c-runtime-library/reference/fopen-s-wfopen-s.md)\
 [Uso delle annotazioni SAL per ridurre i difetti del codice](using-sal-annotations-to-reduce-c-cpp-code-defects.md)
