--- a/docs/code-quality/c6053.md
+++ b/docs/code-quality/c6053.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6053
 ms.assetid: 8e25566a-e3b9-470a-820d-64221a877c53
-ms.openlocfilehash: eb028cc2d213acb6050a1195516b9bb5beb4eaee
-ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
+ms.openlocfilehash: f1b13d1a049d1a8820a3d15fd3cc769269fc182b
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/16/2020
-ms.locfileid: "90685140"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91502056"
 ---
 # <a name="c6053"></a>C6053
 
@@ -22,7 +22,7 @@ Questo avviso indica che la funzione specificata è stata chiamata in modo tale 
 
 La maggior parte delle funzioni di gestione delle stringhe Win32 e della libreria standard C richiedono e producono stringhe con terminazione zero. Alcune funzioni ' counted String ' (incluse `strncpy` , `wcsncpy` , `_mbsncpy` , `_snprintf` e `snwprintf` ) non producono stringhe con terminazione zero se riempiono esattamente il buffer. In questo caso, una chiamata successiva a una funzione stringa che prevede una stringa con terminazione zero andrà oltre la fine del buffer che cerca lo zero. Il programma deve assicurarsi che la stringa termini con uno zero. In generale, è necessario passare una lunghezza alla funzione ' counted String ' una minore delle dimensioni del buffer e quindi assegnare in modo esplicito zero all'ultimo carattere nel buffer.
 
-## <a name="examples"></a>Esempi
+## <a name="examples"></a>Esempio
 
 Il codice di esempio seguente genera questo avviso:
 
@@ -81,4 +81,4 @@ Si noti che questo avviso viene a volte segnalato su determinati idiomi garantit
 ## <a name="see-also"></a>Vedere anche
 
 - [Uso delle annotazioni SAL per ridurre i difetti del codice](using-sal-annotations-to-reduce-c-cpp-code-defects.md)
-- [strncpy_s, _strncpy_s_l, wcsncpy_s, _wcsncpy_s_l, _mbsncpy_s, _mbsncpy_s_l](/cpp/c-runtime-library/reference/strncpy-s-strncpy-s-l-wcsncpy-s-wcsncpy-s-l-mbsncpy-s-mbsncpy-s-l)
+- [strncpy_s, _strncpy_s_l, wcsncpy_s, _wcsncpy_s_l, _mbsncpy_s, _mbsncpy_s_l](../c-runtime-library/reference/strncpy-s-strncpy-s-l-wcsncpy-s-wcsncpy-s-l-mbsncpy-s-mbsncpy-s-l.md)
