--- a/docs/code-quality/c6064.md
+++ b/docs/code-quality/c6064.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6064
 ms.assetid: d8f126aa-b093-440e-820f-65b8e6cffaba
-ms.openlocfilehash: 22c3de685708e4c4451021f891ec0c8600d345df
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: d1cadbaf7582aab1d60d5d5255b5f78756f52be1
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420853"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91501947"
 ---
 # <a name="c6064"></a>C6064
 
-> avviso C6064: argomento Integer mancante per \<funzione > corrispondente all'identificatore di conversione \<numero >
+> avviso C6064: argomento Integer mancante a \<function> corrispondente all'identificatore di conversione \<number>
 
 Questo avviso indica che non è stato fornito un numero sufficiente di argomenti per trovare la corrispondenza con una stringa di formato e uno degli argomenti mancanti è un numero intero. Questo difetto può causare un output non corretto.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché nella chiamata a `sprintf` è stato usato un numero errato di argomenti e l'argomento mancante è un numero intero:
+Il codice seguente genera questo avviso perché è stato usato un numero errato di argomenti nella chiamata a `sprintf` e l'argomento mancante è un numero intero:
 
 ```cpp
 #include <string.h>
@@ -48,7 +48,7 @@ void f( )
 }
 ```
 
-Il codice seguente usa la funzione Safe String Manipulation, `sprintf_s` per correggere l'avviso:
+Il codice seguente usa la funzione Safe String Manipulation `sprintf_s` per correggere il problema:
 
 ```cpp
 #include <string.h>
@@ -63,4 +63,4 @@ void f( )
 
 ## <a name="see-also"></a>Vedere anche
 
-[sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](/cpp/c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l)
+[sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](../c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l.md)
