--- a/docs/code-quality/c6066.md
+++ b/docs/code-quality/c6066.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6066
 ms.assetid: f03c9cf1-d8eb-4731-a66a-da7c924616fb
-ms.openlocfilehash: 77f6d1d5e0439d2e7a46a2590cb4ed0d9e73b795
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 60b5f456412a963f2cb713a7f933f91375def2f5
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420804"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91501885"
 ---
 # <a name="c6066"></a>C6066
 
-> avviso C6066: non puntatore passato come parametro \<numero > quando il puntatore è obbligatorio nella chiamata a \<funzione >
+> avviso C6066: non puntatore passato come parametro \<number> quando è richiesto un puntatore nella chiamata a \<function>
 
-Questo avviso indica che la stringa di formato specifica che è necessario un puntatore, ad esempio una specifica `%n` o `%p` per printf o un `%d` per `scanf`, ma viene passato un puntatore non. È probabile che questo difetto provochi un arresto anomalo o un danneggiamento di qualche forma.
+Questo avviso indica che la stringa di formato specifica che è necessario un puntatore, ad esempio una `%n` `%p` specifica o per printf o `%d` per `scanf` , ma è stato passato un puntatore non. È probabile che questo difetto provochi un arresto anomalo o un danneggiamento di qualche forma.
 
 ## <a name="example"></a>Esempio
 
@@ -42,7 +42,7 @@ void g( int i )
 }
 ```
 
-Per correggere il problema, il codice seguente passa i parametri corretti alle funzioni `sprintf` e `scanf`:
+Per correggere il problema, il codice seguente passa i parametri corretti alle `sprintf` `scanf` funzioni e:
 
 ```cpp
 #include <stdio.h>
@@ -64,7 +64,7 @@ void g( int i )
 }
 ```
 
-Il codice seguente usa funzioni sicure di manipolazione delle stringhe, `sprintf_s` e `scanf_s`, per correggere questo avviso:
+Il codice seguente usa le funzioni di manipolazione delle stringhe sicure, `sprintf_s` e `scanf_s` , per correggere il problema:
 
 ```cpp
 void f( )
@@ -83,9 +83,9 @@ void g( int i )
 }
 ```
 
-Questo avviso viene in genere segnalato perché un numero intero è stato usato per un formato di `%p` anziché un puntatore. L'utilizzo di un numero intero in questa istanza non è portabile a computer a 64 bit.
+Questo avviso viene in genere segnalato perché un numero intero è stato usato per un `%p` formato anziché un puntatore. L'utilizzo di un numero intero in questa istanza non è portabile a computer a 64 bit.
 
 ## <a name="see-also"></a>Vedere anche
 
-- [sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](/cpp/c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l)
-- [scanf_s, _scanf_s_l, wscanf_s, _wscanf_s_l](/cpp/c-runtime-library/reference/scanf-s-scanf-s-l-wscanf-s-wscanf-s-l)
+- [sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](../c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l.md)
+- [scanf_s, _scanf_s_l, wscanf_s, _wscanf_s_l](../c-runtime-library/reference/scanf-s-scanf-s-l-wscanf-s-wscanf-s-l.md)
