--- a/docs/code-quality/c6271.md
+++ b/docs/code-quality/c6271.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6271
 ms.assetid: 24703b17-5bdc-4f97-a56a-b2ea48bacc43
-ms.openlocfilehash: 3cc7748caaeef7ae0fc1db598bda8f30c07e8251
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 971680193238a0d935c3f29a1b6294dba08f46dd
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420300"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91501175"
 ---
 # <a name="c6271"></a>C6271
 
-> avviso C6271: argomento aggiuntivo passato alla funzione \<>: parametro \<numero > non è utilizzato dalla stringa di formato
+> avviso C6271: argomento aggiuntivo passato a \<function> : parametro \<number> non usato dalla stringa di formato
 
 Questo avviso indica che vengono forniti argomenti aggiuntivi oltre a quelli specificati dalla stringa di formato. Di per sé, questo difetto non avrà alcun effetto visibile, sebbene indichi che la finalità del programmatore non viene riflessa nel codice.
 
@@ -50,7 +50,7 @@ void f()
 }
 ```
 
-Nel codice di esempio seguente viene chiamata la funzione Safe String Manipulation, `sprintf_s`, per correggere il problema:
+Il codice di esempio seguente chiama la funzione Safe String Manipulation, `sprintf_s` , per correggere l'avviso:
 
 ```cpp
 #include <stdio.h>
@@ -66,4 +66,4 @@ void f()
 
 ## <a name="see-also"></a>Vedere anche
 
-[sprintf, _sprintf_l, swprintf, _swprintf_l, \__swprintf_l](/cpp/c-runtime-library/reference/sprintf-sprintf-l-swprintf-swprintf-l-swprintf-l)
+[sprintf, _sprintf_l, swprintf, _swprintf_l, \_ _swprintf_l](../c-runtime-library/reference/sprintf-sprintf-l-swprintf-swprintf-l-swprintf-l.md)
