--- a/docs/code-quality/c6272.md
+++ b/docs/code-quality/c6272.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6272
 ms.assetid: b63937ac-fbb2-45ec-936a-641c156e6355
-ms.openlocfilehash: 44585c541286f72ec83ee8d1a4d31bcf241918e5
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 3fbe3ac7046a5bf31ddbcb4aed82f1d46300d014
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420279"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91501198"
 ---
 # <a name="c6272"></a>C6272
 
-> avviso C6272: non float passato come argomento \<numero > quando è necessario float nella chiamata a \<funzione >
+> avviso C6272: non float passato come argomento \<number> quando è richiesto float nella chiamata a \<function>
 
-Questo avviso indica che la stringa di formato specifica che è necessario un valore float, ad esempio, una specifica `%f` o `%g` per `printf,` ma è stato passato un valore non float, ad esempio un Integer o una stringa. È probabile che questo difetto provochi un output errato; in alcuni casi, tuttavia, potrebbe verificarsi un arresto anomalo.
+Questo avviso indica che la stringa di formato specifica che è richiesto un valore float, ad esempio `%f` una `%g` specifica o per, `printf,` ma è stato passato un valore non float, ad esempio un Integer o una stringa. È probabile che questo difetto provochi un output errato; in alcuni casi, tuttavia, potrebbe verificarsi un arresto anomalo.
 
 ## <a name="example"></a>Esempio
 
@@ -37,7 +37,7 @@ void f()
 }
 ```
 
-Per correggere il problema, utilizzare `%i` anziché `%f` specifica, come illustrato nel codice seguente:
+Per correggere il problema, utilizzare `%i` il comando anziché `%f` la specifica, come illustrato nel codice seguente:
 
 ```cpp
 #include <stdio.h>
@@ -52,7 +52,7 @@ void f()
 }
 ```
 
-Nel codice seguente viene utilizzata la funzione Safe String Manipulation, `sprintf_s`, per correggere il problema:
+Il codice seguente usa la funzione Safe String Manipulation, `sprintf_s` , per correggere l'avviso:
 
 ```cpp
 #include <stdio.h>
@@ -69,4 +69,4 @@ void f()
 
 ## <a name="see-also"></a>Vedere anche
 
-[sprintf, _sprintf_l, swprintf, _swprintf_l, \__swprintf_l](/cpp/c-runtime-library/reference/sprintf-sprintf-l-swprintf-swprintf-l-swprintf-l)
+[sprintf, _sprintf_l, swprintf, _swprintf_l, \_ _swprintf_l](../c-runtime-library/reference/sprintf-sprintf-l-swprintf-swprintf-l-swprintf-l.md)
