--- a/docs/code-quality/c6059.md
+++ b/docs/code-quality/c6059.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6059
 ms.assetid: 343a4cd1-048a-4edf-bb4b-187097bb6093
-ms.openlocfilehash: f3ed99e7d1c95390f8b20ff5ed392592a6a07860
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: ac94ae975906212c312158ac0e98058cfd686882
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420846"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91502033"
 ---
 # <a name="c6059"></a>C6059
 
-> avviso C6059: parametro di lunghezza non corretto nella chiamata al > \<funzione. Passare il numero di caratteri rimanenti, non la dimensione del buffer della variabile \<>
+> avviso C6059: parametro di lunghezza non corretto nella chiamata a \<function> . Passare il numero di caratteri rimanenti, non la dimensione del buffer di \<variable>
 
 Questo avviso indica che una chiamata a una funzione di concatenazione di stringhe sta probabilmente passando un valore non corretto per il numero di caratteri da concatenare. Questo difetto può causare un sovraccarico o un arresto anomalo del buffer. Una cause comune di questo difetto è il passaggio della dimensione del buffer, anziché il numero rimanente di caratteri nel buffer, alla funzione di manipolazione delle stringhe.
 
@@ -83,5 +83,5 @@ void f( )
 
 ## <a name="see-also"></a>Vedere anche
 
-- [strncpy_s, _strncpy_s_l, wcsncpy_s, _wcsncpy_s_l, _mbsncpy_s, _mbsncpy_s_l](/cpp/c-runtime-library/reference/strncpy-s-strncpy-s-l-wcsncpy-s-wcsncpy-s-l-mbsncpy-s-mbsncpy-s-l)
-- [strncat_s, _strncat_s_l, wcsncat_s, _wcsncat_s_l, _mbsncat_s, _mbsncat_s_l](/cpp/c-runtime-library/reference/strncat-s-strncat-s-l-wcsncat-s-wcsncat-s-l-mbsncat-s-mbsncat-s-l)
+- [strncpy_s, _strncpy_s_l, wcsncpy_s, _wcsncpy_s_l, _mbsncpy_s, _mbsncpy_s_l](../c-runtime-library/reference/strncpy-s-strncpy-s-l-wcsncpy-s-wcsncpy-s-l-mbsncpy-s-mbsncpy-s-l.md)
+- [strncat_s, _strncat_s_l, wcsncat_s, _wcsncat_s_l, _mbsncat_s, _mbsncat_s_l](../c-runtime-library/reference/strncat-s-strncat-s-l-wcsncat-s-wcsncat-s-l-mbsncat-s-mbsncat-s-l.md)
