--- a/docs/code-quality/c6063.md
+++ b/docs/code-quality/c6063.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6063
 ms.assetid: 9a4b0684-6c13-4242-a1ab-97980b6cfdc4
-ms.openlocfilehash: a9c025c02c311027faed9f457b4f817d33140ad9
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 68795fa8e737511b7b9a67a5f2933d22d9ba8756
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420839"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91502042"
 ---
 # <a name="c6063"></a>C6063
 
-> avviso C6063: argomento stringa mancante per \<funzione > corrispondente all'identificatore di conversione \<numero >
+> avviso C6063: argomento stringa mancante per l' \<function> identificatore di conversione corrispondente \<number>
 
-Questo avviso indica che non è stato fornito un numero sufficiente di argomenti per la corrispondenza con una stringa di formato. almeno uno degli argomenti mancanti è una stringa. Questo difetto può causare arresti anomali e overflow del buffer (se la funzione chiamata è del gruppo di `sprintf`), nonché un output potenzialmente errato.
+Questo avviso indica che non è stato fornito un numero sufficiente di argomenti per la corrispondenza con una stringa di formato. almeno uno degli argomenti mancanti è una stringa. Questo difetto può causare arresti anomali e overflow del buffer (se la funzione chiamata è del `sprintf` gruppo), nonché un output potenzialmente errato.
 
 ## <a name="example"></a>Esempio
 
@@ -57,4 +57,4 @@ void f( )
 
 ## <a name="see-also"></a>Vedere anche
 
-[sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](/cpp/c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l)
+[sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](../c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l.md)
