--- a/docs/code-quality/c6270.md
+++ b/docs/code-quality/c6270.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6270
 ms.assetid: 34467f6e-98cf-489c-ae5e-c08a744d86c3
-ms.openlocfilehash: 4b1cad5cbba59f4e981ca0238178811234260334
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: f81191744b820c84171a044fe878bb8f298aea6b
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420314"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91501243"
 ---
 # <a name="c6270"></a>C6270
 
-> avviso C6270: argomento float mancante per \<funzione >: aggiungere un argomento float corrispondente all'identificatore di conversione \<numero >
+> avviso C6270: manca l'argomento float per \<function> : aggiungere un argomento float corrispondente all'identificatore di conversione \<number>
 
 Questo avviso indica che non è stato fornito un numero sufficiente di argomenti per la corrispondenza con una stringa di formato. almeno uno degli argomenti mancanti è un numero a virgola mobile. Questo difetto può causare arresti anomali, oltre a un output potenzialmente errato.
 
@@ -48,7 +48,7 @@ void f()
 }
 ```
 
-Il codice di esempio seguente usa la funzione di manipolazione sicura delle stringhe, `sprintf_s`, per correggere il problema:
+Il codice di esempio seguente usa la funzione Safe String Manipulation, `sprintf_s` , per correggere l'avviso:
 
 ```cpp
 #include <stdio.h>
@@ -63,4 +63,4 @@ void f()
 
 ## <a name="see-also"></a>Vedere anche
 
-[sprintf, _sprintf_l, swprintf, _swprintf_l, \__swprintf_l](/cpp/c-runtime-library/reference/sprintf-sprintf-l-swprintf-swprintf-l-swprintf-l)
+[sprintf, _sprintf_l, swprintf, _swprintf_l, \_ _swprintf_l](../c-runtime-library/reference/sprintf-sprintf-l-swprintf-swprintf-l-swprintf-l.md)
