--- a/docs/code-quality/c6278.md
+++ b/docs/code-quality/c6278.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6278
 ms.assetid: 5cc3c393-c48a-4f91-9f38-03d7868be5e5
-ms.openlocfilehash: 72a0cd429f9f93fa3d8ed07358dd337d29a0bad8
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 6bc9fd769cba5d0b5198b43f3d6d122ce493286b
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87188479"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91501117"
 ---
 # <a name="c6278"></a>C6278
 
@@ -61,4 +61,4 @@ void f( )
 
 Se l'oggetto sottostante nella matrice è un tipo primitivo, ad esempio **`int`** ,, **`float`** **`enum`** o puntatore, non sono presenti distruttori da chiamare. In questi casi, viene invece segnalato un avviso [C6283](../code-quality/c6283.md) .
 
-L'uso di New e Delete presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di New e Delete presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
