--- a/docs/code-quality/c6280.md
+++ b/docs/code-quality/c6280.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6280
 ms.assetid: b91f2966-0876-4c9b-843a-e142f35be864
-ms.openlocfilehash: b2c6326d333dcde0880745b75f1b64344b018c84
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 9706ddb177ecca9d05620b8171bd1cb8bbe953fb
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87218455"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91501084"
 ---
 # <a name="c6280"></a>C6280
 
-> avviso C6280: \<variable> viene allocato con \<function> , ma eliminato con\<function>
+> avviso C6280: \<variable> viene allocato con \<function> , ma eliminato con \<function>
 
 Questo avviso indica che la funzione chiamante ha allocato memoria in modo incoerente usando una funzione di una famiglia di allocazione di memoria e la ha liberata usando una funzione di un'altra famiglia di allocazione di memoria. L'analizzatore verifica questa condizione solo quando `_Analysis_mode_(_Analysis_local_leak_checks_)` viene specificata l'annotazione SAL. Per impostazione predefinita, questa annotazione viene specificata per il codice della modalità kernel di Windows (driver). Per ulteriori informazioni sulle annotazioni SAL, vedere [utilizzo delle annotazioni SAL per ridurre i difetti del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
 
@@ -60,7 +60,7 @@ void f(int arraySize)
 
 Definizioni API diverse possono usare heap diversi. Ad esempio, `GlobalAlloc` Usa l'heap di sistema e `free` Usa l'heap del processo. È probabile che si verifichino danneggiamenti e arresti anomali della memoria.
 
-Queste incoerenze si applicano ai **`new`** / **`delete`** `malloc` / `free` meccanismi di allocazione della memoria e. Per evitare che si verifichino completamente questi tipi di incoerenze, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
+Queste incoerenze si applicano ai **`new`** / **`delete`** `malloc` / `free` meccanismi di allocazione della memoria e. Per evitare che si verifichino completamente questi tipi di incoerenze, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ```cpp
 // cl.exe /analyze /c /EHsc /nologo /W4
@@ -86,11 +86,11 @@ void f(int arraySize)
 
 ## <a name="see-also"></a>Vedere anche
 
-- [calloc](/cpp/c-runtime-library/reference/calloc)
-- [malloc](/cpp/c-runtime-library/reference/malloc)
-- [libero](/cpp/c-runtime-library/reference/free)
-- [operatore New](/cpp/cpp/new-operator-cpp)
-- [delete-operatore](/cpp/cpp/delete-operator-cpp)
-- [shared_ptr](/cpp/standard-library/shared-ptr-class)
-- [unique_ptr](/cpp/standard-library/unique-ptr-class)
-- [Puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp)
+- [calloc](../c-runtime-library/reference/calloc.md)
+- [malloc](../c-runtime-library/reference/malloc.md)
+- [free](../c-runtime-library/reference/free.md)
+- [operatore New](../cpp/new-operator-cpp.md)
+- [delete-operatore](../cpp/delete-operator-cpp.md)
+- [shared_ptr](../standard-library/shared-ptr-class.md)
+- [unique_ptr](../standard-library/unique-ptr-class.md)
+- [Puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md)
