commit translated contents

--- a/docs/code-quality/c26444.md
+++ b/docs/code-quality/c26444.md
@@ -9,18 +9,18 @@ helpviewer_keywords:
 - C26444
 dev_langs:
 - C++
-ms.openlocfilehash: 00a43a0806fcf7f2b4ec03cb207b3b1f2f718a0c
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 48620dd84e61b1b826d8380d8c3cd67774e978dc
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417045"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91502735"
 ---
-# <a name="c26444-no_unnamed_raii_objects"></a>C26444 NO_UNNAMED_RAII_OBJECTS
+# <a name="c26444-no_unnamed_raii_objects"></a>NO_UNNAMED_RAII_OBJECTS C26444
 
 Evitare oggetti senza nome con costruzione e distruzione personalizzate.
 
-## <a name="c-core-guidelines"></a>C++Linee guida di base
+## <a name="c-core-guidelines"></a>Linee guida di base di C++
 
 [ES. 84: non (provare a) dichiarare una variabile locale senza nome](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-noname)
 
@@ -31,7 +31,7 @@ Gli oggetti senza nome (ovvero temporaneo) con comportamento non semplice posson
 - Questa regola rileva i tipi con distruttori non eliminati. Tenere presente che i distruttori possono essere generati dal compilatore.
 - L'avviso può contrassegnare il codice che non è generato dal compilatore e che richiama un costruttore non predefinito di un tipo RAII o una funzione che restituisce un oggetto di tale tipo. Questo avviso consente di rilevare i risultati delle chiamate ignorate, oltre alle dichiarazioni errate.
 - La logica ignora temporaries se vengono usati in espressioni di livello superiore. Un esempio è temporaries che vengono passati come argomenti o usati per richiamare una funzione.
-- L'implementazione della libreria standard può avere versioni diverse della logica di distruzione per alcuni tipi (ad esempio, contenitori). Questo può produrre avvisi fastidiosi nelle build di debug perché è personalizzato ignorare gli iteratori restituiti da chiamate come [std:: vector:: Insert](/cpp/standard-library/vector-class#insert). Sebbene tali avvisi non siano utilizzabili nella maggior parte dei casi, sono legittimi nel puntare al posto in cui viene eseguita una parte non ovvia di oggetti temporanei.
+- L'implementazione della libreria standard può avere versioni diverse della logica di distruzione per alcuni tipi (ad esempio, contenitori). Questo può produrre avvisi fastidiosi nelle build di debug perché è personalizzato ignorare gli iteratori restituiti da chiamate come [std:: vector:: Insert](../standard-library/vector-class.md#insert). Sebbene tali avvisi non siano utilizzabili nella maggior parte dei casi, sono legittimi nel puntare al posto in cui viene eseguita una parte non ovvia di oggetti temporanei.
 
 ## <a name="example-ignored-call-result"></a>Esempio: risultato della chiamata ignorato
 
