--- a/docs/code-quality/c26409.md
+++ b/docs/code-quality/c26409.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - C26409
 ms.assetid: a3b3a229-d566-4be3-bd28-2876ccc8dc37
-ms.openlocfilehash: f525f37bb5ccf48c4f0f2ae1e33a2d447e409816
-ms.sourcegitcommit: f1752bf90b4f869633a859ace85439ca19e208b2
+ms.openlocfilehash: bfa89bf91228112412dc22ed0beb25386ceddf89
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2020
-ms.locfileid: "88722167"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91503467"
 ---
 # <a name="c26409-no_new_delete"></a>NO_NEW_DELETE C26409
 
 > `Avoid calling new and delete explicitly, use std::make_unique<T> instead (r.11).`
 
-Anche se il codice è pulito dalle chiamate a ` malloc()` e `free()` , è comunque consigliabile prendere in considerazione opzioni migliori rispetto all'uso esplicito degli operatori [ `new` e `delete` ](/cpp/cpp/new-and-delete-operators).
+Anche se il codice è pulito dalle chiamate a `malloc()` e `free()` , è comunque consigliabile prendere in considerazione opzioni migliori rispetto all'uso esplicito degli operatori [ `new` e `delete` ](../cpp/new-and-delete-operators.md).
 
 **Linee guida di base di C++**: \
 [R. 11: evitare la chiamata al nuovo ed eliminare in modo esplicito](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#r11-avoid-calling-new-and-delete-explicitly)
 
-La correzione finale consiste nell'utilizzare i puntatori intelligenti e le funzioni predefinite appropriate, ad esempio [`std::make_unique`](/cpp/standard-library/memory-functions#make_unique) .
+La correzione finale consiste nell'utilizzare i puntatori intelligenti e le funzioni predefinite appropriate, ad esempio [`std::make_unique`](../standard-library/memory-functions.md#make_unique) .
 
-## <a name="remarks"></a>Commenti
+## <a name="remarks"></a>Osservazioni
 
 - Il controllo Avvisa in caso di chiamate a qualsiasi tipo di operatore **`new`** o **`delete`** : scalare, vettore, versioni di overload (globali e specifiche della classe) e versioni di posizionamento. Il caso di posizionamento **`new`** potrebbe richiedere alcuni chiarimenti nelle linee guida principali per le correzioni suggerite e può essere omesso in futuro.
 
@@ -40,5 +40,5 @@ void f(int i)
     delete[] arr;            // C26409, warning is issued for all delete calls
 
     auto unique = std::make_unique<int[]>(i); // prefer using smart pointers over new and delete
-} 
+}
 ```
