commit translated contents

--- a/docs/code-quality/c6225.md
+++ b/docs/code-quality/c6225.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6225
 ms.assetid: 2d98ffec-9842-4cd1-b1a9-9ac9d1d2a136
-ms.openlocfilehash: 92c31b6ec8362b911e2055263f4b079b8fc19182
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 51a6922ae85b1de12c4e308eae02feba08cc08cc
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420594"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91505032"
 ---
 # <a name="c6225"></a>C6225
 
 > avviso C6225: cast implicito tra tipi integer semanticamente diversi: assegnazione di 1 o TRUE a HRESULT. Provare a usare invece S_FALSE
 
-Questo avviso indica che è in corso l'assegnazione o l'inizializzazione di un `HRESULT` con un valore di 1 esplicito. I tipi booleani indicano l'esito positivo di un valore diverso da zero. l'operazione Success (`S_OK`) in `HRESULT` è indicata da un valore pari a 0. Questo avviso è spesso causato da una confusione accidentale di tipi booleani e `HRESULT`. Per indicare l'esito positivo, è necessario utilizzare la costante simbolica `S_OK`.
+Questo avviso indica che `HRESULT` è in corso l'assegnazione o l'inizializzazione di un oggetto con un valore di 1 esplicito. I tipi booleani indicano l'esito positivo di un valore diverso da zero. Success ( `S_OK` ) in `HRESULT` è indicato da un valore pari a 0. Questo avviso è spesso causato da una confusione accidentale di `HRESULT` tipi booleani e. Per indicare l'esito positivo, `S_OK` è necessario utilizzare la costante simbolica.
 
 ## <a name="example"></a>Esempio
 
-Nel codice seguente l'assegnazione di `HRESULT` genera questo avviso:
+Nel codice seguente, l'assegnazione di `HRESULT` genera questo avviso:
 
 ```cpp
 #include <windows.h>
@@ -62,9 +62,9 @@ VOID f( )
 }
 ```
 
-Per questo avviso, il tipo di `SCODE` è equivalente a `HRESULT`.
+Per questo avviso, il `SCODE` tipo è equivalente a `HRESULT` .
 
-Per indicare l'esito negativo, è necessario utilizzare `E_FAIL`o un'altra costante.
+Per indicare un errore, `E_FAIL` o un'altra costante, è necessario utilizzare.
 
 Per ulteriori informazioni, vedere uno degli argomenti seguenti:
 
@@ -72,4 +72,4 @@ Per ulteriori informazioni, vedere uno degli argomenti seguenti:
 
 [FALLITO](/windows/desktop/api/winerror/nf-winerror-failed)
 
-Per sfruttare la metodologia di allocazione della memoria moderna C++ , utilizzare i meccanismi forniti C++ dalla libreria STL (Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Per sfruttare la metodologia di allocazione di memoria C++ moderna, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
