--- a/docs/code-quality/c6308.md
+++ b/docs/code-quality/c6308.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6308
 ms.assetid: 1162cd96-9037-4576-9858-0c8361a12559
-ms.openlocfilehash: fefeda82c4a4f7963e9d7a2e64b94acbf274e509
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 5f465768833e2240df0a0c6b78c4d70aef6976fd
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419831"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91504976"
 ---
 # <a name="c6308"></a>C6306
 
-> avviso C6308:' realloc ' può restituire un puntatore null: l'assegnazione di un puntatore null a \<variabile >, che viene passata come argomento a' realloc ', provocherà la perdita del blocco di memoria originale
+> avviso C6308:' realloc ' può restituire un puntatore null: l'assegnazione di un puntatore null a \<variable> , che viene passato come argomento a' realloc ', provocherà la perdita del blocco di memoria originale
 
 Questo avviso indica una perdita di memoria che è il risultato dell'utilizzo errato di una funzione di riallocazione. Le funzioni di riallocazione dell'heap non liberano il buffer passato se la riallocazione ha esito negativo. Per correggere l'errore, assegnare il risultato della funzione di riallocazione a un oggetto temporaneo, quindi sostituire il puntatore originale dopo il completamento della riallocazione.
 
@@ -67,7 +67,7 @@ void f()
 
 Questo avviso può generare un rumore se è presente un alias Live per il buffer da riallocare al momento dell'assegnazione del risultato della funzione di riallocazione.
 
-Per evitare completamente questi tipi di problemi, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Per evitare completamente questi tipi di problemi, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ## <a name="see-also"></a>Vedere anche
 
