--- a/docs/code-quality/c6328.md
+++ b/docs/code-quality/c6328.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6328
 ms.assetid: e25b00fa-d344-4dc9-b322-b4f1ae06f315
-ms.openlocfilehash: ad8cf0b2564ff9a24df29851c094e31089df2ae6
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: dbd46811d27d467fa15a90c5da72cb04c4b0c330
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87231234"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91504955"
 ---
 # <a name="c6328"></a>C6328
 
-> avviso C6328: dimensioni non corrispondenti: \<type> passato come parametro \<number> quando \<type> è obbligatorio nella chiamata a\<function>
+> avviso C6328: dimensioni non corrispondenti: \<type> passato come parametro \<number> quando \<type> è obbligatorio nella chiamata a \<function>
 
 Il passaggio di un argomento di tipo **`char`** al runtime C, le routine basate su caratteri denominate `is<xxx>()` , ad esempio, `isspace()` possono avere risultati imprevedibili. Ad esempio, un carattere a byte singolo SBCS o MBCS di tipo **`char`** con un valore maggiore di `0x7F` è un valore negativo. Se **`char`** viene passato un oggetto, il compilatore potrebbe convertire il valore in un oggetto con segno **`int`** o con segno **`long`** . Questo valore può essere esteso con segno dal compilatore, con risultati imprevisti. Ad esempio, `isspace` accetta un argomento di tipo **`int`** ; tuttavia, l'intervallo valido di valori per il relativo argomento di input è:
 
@@ -24,7 +24,7 @@ Il passaggio di un argomento di tipo **`char`** al runtime C, le routine basate 
 
 ## <a name="example"></a>Esempio
 
-Per impostazione predefinita, **`char`** è un tipo con segno nel compilatore Microsoft C++, quindi l'intervallo di valori di una variabile di tipo char è `-128 <= c <= 127` . Se pertanto sono state effettuate le operazioni seguenti, il `c` segno verrà esteso a un oggetto firmato **`int`** con un valore pari a-37, che non è compreso nell'intervallo valido per [lo spazio](/cpp/standard-library/locale-functions#isspace).
+Per impostazione predefinita, **`char`** è un tipo con segno nel compilatore Microsoft C++, quindi l'intervallo di valori di una variabile di tipo char è `-128 <= c <= 127` . Se pertanto sono state effettuate le operazioni seguenti, il `c` segno verrà esteso a un oggetto firmato **`int`** con un valore pari a-37, che non è compreso nell'intervallo valido per [lo spazio](../standard-library/locale-functions.md#isspace).
 
 ```cpp
 #include <iostream>
