--- a/docs/code-quality/c6387.md
+++ b/docs/code-quality/c6387.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6387
 ms.assetid: 3ea2fc4d-ffc3-4c3c-bfae-d42aa56235d8
-ms.openlocfilehash: 1354f262d3fdb2f21204e7a1ef4c513da67337fe
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: f8cc2375d58f2cfff7cd3e5417cb8ad654bae1ba
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419446"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91506800"
 ---
 # <a name="c6387"></a>C6387
 
-> avviso C6387: \<argomento > può essere \<valore >: non rispetta la specifica per la funzione \<nome della funzione >: righe: x, y
+> avviso C6387: \<argument> può essere \<value> : questo non rispetta la specifica per la funzione \<function name> : righe: x, y
 
-Questo avviso viene generato se al parametro di una funzione con annotazioni viene passato un valore imprevisto. Se ad esempio si passa un valore potenzialmente null a un parametro contrassegnato con `_In_` Annotation, viene generato questo avviso.
+Questo avviso viene generato se al parametro di una funzione con annotazioni viene passato un valore imprevisto. Se ad esempio si passa un valore potenzialmente null a un parametro contrassegnato con Annotation, viene `_In_` generato questo avviso.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché un parametro null viene passato a `f(char *)`:
+Il codice seguente genera questo avviso perché un parametro null viene passato a `f(char *)` :
 
 ```cpp
 
@@ -58,4 +58,4 @@ void main()
 
 ## <a name="see-also"></a>Vedere anche
 
-[strlen, wcslen, _mbslen, _mbslen_l, _mbstrlen, _mbstrlen_l](/cpp/c-runtime-library/reference/strlen-wcslen-mbslen-mbslen-l-mbstrlen-mbstrlen-l)
+[strlen, wcslen, _mbslen, _mbslen_l, _mbstrlen, _mbstrlen_l](../c-runtime-library/reference/strlen-wcslen-mbslen-mbslen-l-mbstrlen-mbstrlen-l.md)
