--- a/docs/code-quality/c6388.md
+++ b/docs/code-quality/c6388.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6388
 ms.assetid: 667fe9cf-cc53-49f9-b6c0-6ee87c397568
-ms.openlocfilehash: d3ce38cb69f4c918b6cd0a2e43a360d4f32b6af9
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 45e68bc3d7a95965f0d9d6abfa79f82883f481fe
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419432"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91504942"
 ---
 # <a name="c6388"></a>C6388
 
-> avviso C6388: \<argomento > non può essere \<valore >: non rispetta la specifica per la funzione \<nome della funzione >: righe: x, y
+> avviso C6388: non \<argument> può essere \<value> : non rispetta la specifica per la funzione \<function name> : righe: x, y
 
 Questo avviso indica che è in uso un valore imprevisto nel contesto specificato. Questa operazione viene in genere segnalata per i valori passati come argomenti a una funzione che non lo prevede.
 
@@ -65,4 +65,4 @@ void f()
 }
 ```
 
-Si noti che l'uso di malloc e Free presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Si noti che l'uso di malloc e Free presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
