--- a/docs/code-quality/c6011.md
+++ b/docs/code-quality/c6011.md
@@ -1,6 +1,6 @@
 ---
 title: C6011
-description: Informazioni di riferimento sull' C++ avviso di analisi del codice di Visual Studio C6011.
+description: Informazioni di riferimento per l'avviso di analisi del codice di Visual Studio C++ C6011.
 ms.date: 03/23/2020
 ms.topic: reference
 f1_keywords:
@@ -8,22 +8,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6011
 ms.assetid: 54b7bc2b-b8f5-43fc-a9a3-8189b03f249a
-ms.openlocfilehash: 47b0bac661784c4ad4e58efdf6e3df6dc5669e54
-ms.sourcegitcommit: af1911ec1dea78878383d75350b8d165ebd155e5
+ms.openlocfilehash: 5ff0d39d1192a190089ace1024ca987c4151c119
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/25/2020
-ms.locfileid: "80250933"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91506570"
 ---
 # <a name="c6011"></a>C6011
 
-> avviso C6011: dereferenziazione del puntatore NULL \<nome >
+> avviso C6011: dereferenziazione del puntatore NULL \<name>
 
 Questo avviso indica che il codice consente di dereferenziare un puntatore potenzialmente null. Se il valore del puntatore non è valido, il risultato sarà indefinito. Per risolvere il problema, convalidare il puntatore prima di usarlo.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché una chiamata a `malloc` potrebbe restituire null se è disponibile memoria insufficiente:
+Il codice seguente genera questo avviso perché una chiamata a `malloc` può restituire null se è disponibile memoria insufficiente:
 
 ```cpp
 #include <malloc.h>
@@ -55,7 +55,7 @@ void f( )
 }
 ```
 
-Le funzioni possono avere parametri annotati usando la proprietà `Null` in una condizione `Pre`. Allocare memoria all'interno di queste funzioni prima di dereferenziare il parametro. Il codice seguente genera l'avviso C6011 perché viene effettuato un tentativo di dereferenziare un puntatore null (`pc`) all'interno della funzione senza prima allocare memoria:
+Le funzioni possono avere parametri annotati usando la `Null` Proprietà in una `Pre` condizione. Allocare memoria all'interno di queste funzioni prima di dereferenziare il parametro. Il codice seguente genera l'avviso C6011 perché viene effettuato un tentativo di dereferenziare un puntatore null ( `pc` ) all'interno della funzione senza prima allocare memoria:
 
 ```cpp
 #include <sal.h>
@@ -67,12 +67,12 @@ void f([Pre(Null=Yes)] char* pc)
 }
 ```
 
-L'uso sconsiderato di `malloc` e `free` causa perdite di memoria ed eccezioni. Per ridurre al minimo questi tipi di perdite e problemi di eccezione, evitare di allocare la memoria non elaborata manualmente. Usare invece i meccanismi forniti dalla libreria C++ standard (STL). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso sconsiderato di `malloc` e `free` genera perdite di memoria ed eccezioni. Per ridurre al minimo questi tipi di perdite e problemi di eccezione, evitare di allocare la memoria non elaborata manualmente. Usare invece i meccanismi forniti dalla libreria standard C++ (STL). Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ## <a name="see-also"></a>Vedere anche
 
 - [Uso delle annotazioni SAL per ridurre i difetti del codice](using-sal-annotations-to-reduce-c-cpp-code-defects.md)
-- [NULL](/cpp/c-runtime-library/null-crt)
-- [Operatori address-of e di riferimento indiretto](/cpp/c-language/indirection-and-address-of-operators)
-- [malloc](/cpp/c-runtime-library/reference/malloc)
-- [free](/cpp/c-runtime-library/reference/free)
+- [NULL](../c-runtime-library/null-crt.md)
+- [Operatori di riferimento indiretto e address-of](../c-language/indirection-and-address-of-operators.md)
+- [malloc](../c-runtime-library/reference/malloc.md)
+- [free](../c-runtime-library/reference/free.md)
