--- a/docs/code-quality/c6320.md
+++ b/docs/code-quality/c6320.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6320
 ms.assetid: fb9e568e-b3d4-4ce2-a276-a64ad74d7b1e
-ms.openlocfilehash: 979143e9bf95f0692c63cd68a8f0747c67a82094
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6c5c67eb40ca3373b623dddbbb3cbfe1f21dc69c
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419698"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91508749"
 ---
 # <a name="c6320"></a>C6320
 
 > avviso C6320: l'espressione di filtro eccezioni è la costante EXCEPTION_EXECUTE_HANDLER. Questo può mascherare le eccezioni che non sono state progettate per essere gestite
 
-Questo avviso indica l'effetto collaterale dell'utilizzo di EXCEPTION_EXECUTE_HANDLER costante nel blocco __except. In questo caso, l'istruzione nel blocco \__except viene sempre eseguita per gestire l'eccezione, incluse le eccezioni che non si desidera gestire in una funzione specifica. Si consiglia di controllare l'eccezione prima di gestirla.
+Questo avviso indica l'effetto collaterale dell'utilizzo di EXCEPTION_EXECUTE_HANDLER costante nel blocco __except. In questo caso, l'istruzione nel \_ blocco _except verrà sempre eseguita per gestire l'eccezione, incluse le eccezioni che non si desidera gestire in una funzione specifica. Si consiglia di controllare l'eccezione prima di gestirla.
 
 ## <a name="example"></a>Esempio
 
@@ -70,4 +70,4 @@ void f(int *p)
 
 ## <a name="see-also"></a>Vedere anche
 
-[Istruzione try-except](/cpp/cpp/try-except-statement)
+[Istruzione try-except](../cpp/try-except-statement.md)
